# QA_Generator

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  🐛-bug-report.md
.github/workflows/: lint.yml  test.yml
qa_generator/: about.py  constants.py  file_parser.py  prompts.py  qa_generator.py
tests/: conftest.py  test_file_parsing.py  test_qa_generation.py
tests/sample_files/: python_syntax.docx  python_syntax.rst  python_syntax.txt
